--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,8 @@ h1 {
 
 #board {
     display:grid;
+    height: 380px;
+    width: 380px;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
     background-color: rgba(255, 255, 255, 0.9);
@@ -42,7 +44,22 @@ h1 {
 /* GRID ITEMS */
 
 #board > div {
-    width: 100px;
-    height: 100px;
-    background-color: rgba(0, 0, 0, 0.9);
+    width: 120px;
+    height: 120px;
+    background-color: #191919;
 }
+
+/* SHAPES */
+
+.circle {
+    display: block;
+    width: 80px;
+    height: 80px;
+    background: #191919;
+    border: 10px solid red;
+    border-radius: 50%;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.cross 
