--- a/styles/style.css
+++ b/styles/style.css
@@ -62,4 +62,59 @@ h1 {
     margin-left: 10px;
 }
 
-.cross 
+.cross {
+    top:5px;
+    left: 55px;
+    background: red;
+    height: 113px;
+    position: relative;
+    width: 10px;
+    transform:rotate(45deg);
+}
+.cross:after {
+    background: red;
+    content: "";
+    height: 10px;
+    left: -51px;
+    position: absolute;
+    top: 51px;
+    width: 113px;
+}
+
+/* SELECT SCREEN */
+
+#start {
+    position:fixed;
+    background-color: white;
+    height: 80%;
+    width: 80%;
+    left: 10%;
+    border-radius: 10px;
+    border: 5px dashed gray;
+}
+
+#twoPlayers {
+    position:fixed;
+    color: red;
+    height: 5%;
+    width: 40%;
+    left: 30%;
+    top: 40%;
+}
+
+#vsComputer {
+    position:fixed;
+    color:gray;
+    height: 5%;
+    width: 40%;
+    left: 30%;
+    top:46%;
+}
+
+#form1 {
+    color: black;
+}
+
+#form2 {
+    color: black;
+}
